<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="@string/tvTitulo"
        android:textColorHint="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="266dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        app:layout_constraintVertical_bias="0.31">

        <Button
            android:id="@+id/btGasto"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/btGasto"
            android:onClick="goGastos"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btConsulta"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/btConsulta"
            android:onClick="goConsulta"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btCompara"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/btCompara"
            android:onClick="goComparar"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>