<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NvoServicio">

    <ImageButton
        android:id="@+id/ibtVolver2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:onClick="volver"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/retro" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="302dp"
        android:layout_height="376dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibtVolver2">

        <TextView
            android:id="@+id/tvTituloServicio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/tvTituloServicio"
            android:textColorHint="#000000"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/etServicio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/etServicio"
            android:inputType="textPersonName"
            android:textColorHint="#000000" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/etDescripción"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ems="10"
            android:hint="@string/etDescripción"
            android:inputType="textPersonName"
            android:textAlignment="gravity"
            android:textColorHint="#000000"
            android:textDirection="firstStrong" />

    </LinearLayout>

    <Button
        android:id="@+id/btCrearServicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/btCrearServicio"
        android:onClick="crearServicio"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
































